--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.5.8",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.25.0",
+    "draft-js": "^0.11.7",
+    "graphql": "^16.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
@@ -17,6 +21,7 @@
     "stream-chat": "^5.4.0",
     "stream-chat-react": "^6.12.2",
     "sweetalert": "^2.1.2",
+    "timeago.js": "^4.0.2",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
