--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-to-pdf": "^0.0.14",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "stream-chat": "^5.4.0",
